--- a/client_app/android/app/src/main/AndroidManifest.xml
+++ b/client_app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="client_app"
+        android:label="黑盒"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
